--- a/client/src/styles/_utilities.scss
+++ b/client/src/styles/_utilities.scss
@@ -35,3 +35,17 @@
     color: #373b53;
   }
 }
+
+.td-bold {
+  font-size: 16px;
+  font-weight: 700;
+  color: #0c0e16;
+  line-height: 24px;
+}
+
+.td-beautiful {
+  font-size: 12px;
+  font-weight: 500;
+  color: #7e88c3;
+  line-height: 24px;
+}
