--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -134,14 +134,52 @@ body {
           font-size: 12px;
           font-weight: 700;
           padding-right: 10px;
+          &:hover {
+            cursor: pointer;
+          }
         }
 
         img {
           border: 2px solid transparent;
+          &:hover {
+            cursor: pointer;
+          }
         }
 
-        &:hover {
-          cursor: pointer;
+        #filter-modal {
+          position: absolute;
+          height: 130px;
+          width: 200px;
+          top: 125px;
+          right: 520px;
+          background: #ffffff;
+          box-shadow: 0px 10px 20px rgba(72, 84, 159, 0.25);
+          border-radius: 8px;
+          padding-bottom: 20px;
+
+          ul {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            padding-left: 30px;
+            li {
+              display: flex;
+              flex-direction: row;
+              align-items: center;
+              list-style: none;
+
+              p {
+                font-size: 12px;
+                font-weight: 700;
+                color: #0c0e16;
+                padding-left: 10px;
+
+                &:hover {
+                  cursor: pointer;
+                }
+              }
+            }
+          }
         }
       }
 
@@ -313,69 +351,25 @@ body {
         display: flex;
         justify-content: space-between;
 
-        #discard-btn {
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          height: 50px;
-          width: 100px;
+        .discard {
+          color: #7e88c3;
           background: #f9fafe;
-          border-radius: 24px;
-
-          p {
-            font-size: 12px;
-            font-weight: 700;
-            color: #7e88c3;
-          }
-
-          &:hover {
-            cursor: pointer;
-          }
+          width: 100px;
         }
 
         #save-btns {
           display: flex;
           justify-content: space-between;
 
-          #draft-btn {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 50px;
-            width: 135px;
+          .draft {
+            color: #7e88c3;
             background: #373b53;
-            border-radius: 24px;
-            margin-right: 5px;
-
-            p {
-              font-size: 12px;
-              font-weight: 700;
-              color: #7e88c3;
-            }
-
-            &:hover {
-              cursor: pointer;
-            }
+            margin-right: 10px;
           }
 
-          #send-btn {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 50px;
-            width: 135px;
+          .send {
+            color: #ffffff;
             background: #7c5dfa;
-            border-radius: 24px;
-
-            p {
-              font-size: 12px;
-              font-weight: 700;
-              color: #ffffff;
-            }
-
-            &:hover {
-              cursor: pointer;
-            }
           }
         }
       }
@@ -469,6 +463,7 @@ body {
 
         &:hover {
           cursor: pointer;
+          border: 1px solid #7c5dfa;
         }
       }
     }
@@ -927,6 +922,80 @@ body {
           border-radius: 24px;
 
           p {
+            font-size: 12px;
+            font-weight: 700;
+            color: #ffffff;
+          }
+
+          &:hover {
+            cursor: pointer;
+          }
+        }
+      }
+    }
+
+    #delete-modal {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      height: 250px;
+      width: 480px;
+      background: #ffffff;
+      box-shadow: rgba(72, 84, 159, 0.100397);
+      border-radius: 8px;
+      padding: 50px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+
+      #dm-heading {
+        font-size: 24px;
+        font-weight: 700;
+        color: #0c0e16;
+      }
+
+      #dm-question {
+        font-size: 16px;
+        font-weight: 500;
+        color: #888eb0;
+      }
+
+      #dm-btns {
+        display: flex;
+        justify-content: flex-end;
+
+        #dm-cancel {
+          width: 91px;
+          height: 48px;
+          margin-right: 10px;
+          border-radius: 24px;
+          background: #f9fafe;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+
+          #cancel {
+            font-size: 12px;
+            font-weight: 700;
+            color: #7e88c3;
+          }
+
+          &:hover {
+            cursor: pointer;
+          }
+        }
+
+        #dm-delete {
+          width: 91px;
+          height: 48px;
+          border-radius: 24px;
+          background: #ec5757;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+
+          #delete {
             font-size: 12px;
             font-weight: 700;
             color: #ffffff;
