--- a/client/src/styles/_utilities.scss
+++ b/client/src/styles/_utilities.scss
@@ -79,3 +79,17 @@ input {
   position: absolute;
   transition: all 1.3s;
 }
+
+.form-btn {
+  font-size: 12px;
+  font-weight: 700;
+  border-radius: 24px;
+  width: 135px;
+  height: 50px;
+  border: none;
+  outline: none;
+
+  &:hover {
+    cursor: pointer;
+  }
+}
