--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -216,6 +216,7 @@ body {
 
         &:hover {
           cursor: pointer;
+          background: #9277ff;
         }
       }
     }
@@ -283,70 +284,76 @@ body {
 
         #td-date-terms {
           width: 100%;
-          display: flex;
-          justify-content: space-between;
+          display: grid;
+          grid-template-columns: 50% 50%;
 
-          input {
-            width: 240px;
-
-            &:hover {
-              cursor: pointer;
+          #td-date {
+            input {
+              width: 90%;
             }
           }
 
-          #payment-terms-drop {
-            height: 50px;
-            border: 1px solid #dfe3fa;
-            border-radius: 4px;
-            width: 240px;
+          #td-terms {
+            width: 100%;
 
-            #term-arrow {
+            #payment-terms-drop {
               height: 50px;
-              display: flex;
-              flex-direction: row;
-              justify-content: space-between;
-              align-items: center;
-              padding: 0 1rem;
+              border: 1px solid #dfe3fa;
+              border-radius: 4px;
+              width: 100%;
+              position: relative;
 
-              p {
-                font-family: 'Spartan', sans-serif;
-                font-size: 12px;
-                font-weight: 700;
-                color: #0c0e16;
-              }
-            }
+              #term-arrow {
+                height: 50px;
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: center;
+                padding: 0 1rem;
 
-            #dropdown-items {
-              background: #ffffff;
-              display: none;
-              position: absolute;
-              z-index: 10;
-              width: 241px;
-
-              p {
-                border-bottom: 1px solid #dfe3fa;
-                padding: 1rem;
-                font-family: 'Spartan', sans-serif;
-                font-size: 12px;
-                font-weight: 700;
-                color: #0c0e16;
-
-                &:hover {
-                  cursor: pointer;
-                  background: #f9fafe;
+                p {
+                  font-family: 'Spartan', sans-serif;
+                  font-size: 12px;
+                  font-weight: 700;
+                  color: #0c0e16;
                 }
               }
 
-              :last-child {
-                border: none;
-              }
-            }
-
-            &:hover {
-              cursor: pointer;
-
               #dropdown-items {
-                display: block;
+                box-shadow: 0px 10px 20px rgba(72, 84, 159, 0.25);
+                border-radius: 8px;
+                background: #ffffff;
+                display: none;
+                // position: absolute;
+                z-index: 10;
+                width: 100%;
+
+                p {
+                  border-bottom: 1px solid #dfe3fa;
+                  padding: 1rem;
+                  font-family: 'Spartan', sans-serif;
+                  font-size: 12px;
+                  font-weight: 700;
+                  color: #0c0e16;
+
+                  &:hover {
+                    cursor: pointer;
+                    color: #7c5dfa;
+                  }
+                }
+
+                :last-child {
+                  border: none;
+                }
+              }
+
+              &:hover {
+                cursor: pointer;
+                border: 1px solid #9277ff;
+
+                #dropdown-items {
+                  display: block;
+                }
               }
             }
           }
@@ -405,6 +412,7 @@ body {
 
           &:hover {
             cursor: pointer;
+            background: #dfe3fa;
           }
         }
       }
@@ -418,6 +426,10 @@ body {
           background: #f9fafe;
           width: 100px;
           padding: 0;
+
+          &:hover {
+            background: #dfe3fa;
+          }
         }
 
         #save-btns {
@@ -429,12 +441,20 @@ body {
             background: #373b53;
             margin-right: 10px;
             padding: 0;
+
+            &:hover {
+              background: #0c0e16;
+            }
           }
 
           .send {
             color: #ffffff;
             background: #7c5dfa;
             padding: 0;
+
+            &:hover {
+              background: #9277ff;
+            }
           }
         }
       }
