--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -272,257 +272,257 @@ body {
       }
     }
 
-    #new-invoice-modal {
-      position: absolute;
-      height: auto;
-      width: 35vw;
-      min-width: 380px;
-      top: 0;
-      left: 0;
-      background: #ffffff;
-      border-radius: 0px 20px 20px 0px;
-      padding: 50px 50px 50px 150px;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
+    // #new-invoice-modal {
+    //   position: absolute;
+    //   height: auto;
+    //   width: 35vw;
+    //   min-width: 380px;
+    //   top: 0;
+    //   left: 0;
+    //   background: #ffffff;
+    //   border-radius: 0px 20px 20px 0px;
+    //   padding: 50px 50px 50px 150px;
+    //   display: flex;
+    //   flex-direction: column;
+    //   justify-content: space-between;
 
-      #new-invoice-title {
-        font-size: 24px;
-        line-height: 32px;
-        font-weight: 700;
-        color: #0c0e16;
-        margin-bottom: 20px;
-      }
+    //   #new-invoice-title {
+    //     font-size: 24px;
+    //     line-height: 32px;
+    //     font-weight: 700;
+    //     color: #0c0e16;
+    //     margin-bottom: 20px;
+    //   }
 
-      #ni-bill-from {
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        margin-bottom: 20px;
+    //   #ni-bill-from {
+    //     display: flex;
+    //     flex-direction: column;
+    //     justify-content: flex-start;
+    //     margin-bottom: 20px;
 
-        #street-address {
-          input {
-            width: 98%;
-          }
-        }
+    //     #street-address {
+    //       input {
+    //         width: 98%;
+    //       }
+    //     }
 
-        #ni-city-zip-country {
-          width: 101%;
-          display: flex;
-          justify-content: space-between;
+    //     #ni-city-zip-country {
+    //       width: 101%;
+    //       display: flex;
+    //       justify-content: space-between;
 
-          input {
-            width: 90%;
-          }
-        }
-      }
+    //       input {
+    //         width: 90%;
+    //       }
+    //     }
+    //   }
 
-      #ni-bill-to {
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        margin-bottom: 20px;
+    //   #ni-bill-to {
+    //     display: flex;
+    //     flex-direction: column;
+    //     justify-content: flex-start;
+    //     margin-bottom: 20px;
 
-        #bt-cityzipcountry {
-          width: 101%;
-          display: flex;
-          justify-content: space-between;
+    //     #bt-cityzipcountry {
+    //       width: 101%;
+    //       display: flex;
+    //       justify-content: space-between;
 
-          input {
-            width: 90%;
-          }
-        }
+    //       input {
+    //         width: 90%;
+    //       }
+    //     }
 
-        #td-date-terms {
-          width: 100%;
-          display: grid;
-          grid-template-columns: 50% 50%;
+    //     #td-date-terms {
+    //       width: 100%;
+    //       display: grid;
+    //       grid-template-columns: 50% 50%;
 
-          #td-date {
-            input {
-              width: 90%;
-            }
-          }
+    //       #td-date {
+    //         input {
+    //           width: 90%;
+    //         }
+    //       }
 
-          #td-terms {
-            width: 100%;
+    //       #td-terms {
+    //         width: 100%;
 
-            #payment-terms-drop {
-              height: 50px;
-              border: 1px solid #dfe3fa;
-              border-radius: 4px;
-              width: 100%;
-              position: relative;
+    //         #payment-terms-drop {
+    //           height: 50px;
+    //           border: 1px solid #dfe3fa;
+    //           border-radius: 4px;
+    //           width: 100%;
+    //           position: relative;
 
-              #term-arrow {
-                height: 50px;
-                display: flex;
-                flex-direction: row;
-                justify-content: space-between;
-                align-items: center;
-                padding: 0 1rem;
+    //           #term-arrow {
+    //             height: 50px;
+    //             display: flex;
+    //             flex-direction: row;
+    //             justify-content: space-between;
+    //             align-items: center;
+    //             padding: 0 1rem;
 
-                p {
-                  font-family: 'Spartan', sans-serif;
-                  font-size: 12px;
-                  font-weight: 700;
-                  color: #0c0e16;
-                }
-              }
+    //             p {
+    //               font-family: 'Spartan', sans-serif;
+    //               font-size: 12px;
+    //               font-weight: 700;
+    //               color: #0c0e16;
+    //             }
+    //           }
 
-              #dropdown-items {
-                box-shadow: 0px 10px 20px rgba(72, 84, 159, 0.25);
-                border-radius: 8px;
-                background: #ffffff;
-                display: none;
-                z-index: 10;
-                width: 100%;
+    //           #dropdown-items {
+    //             box-shadow: 0px 10px 20px rgba(72, 84, 159, 0.25);
+    //             border-radius: 8px;
+    //             background: #ffffff;
+    //             display: none;
+    //             z-index: 10;
+    //             width: 100%;
 
-                p {
-                  border-bottom: 1px solid #dfe3fa;
-                  padding: 1rem;
-                  font-family: 'Spartan', sans-serif;
-                  font-size: 12px;
-                  font-weight: 700;
-                  color: #0c0e16;
+    //             p {
+    //               border-bottom: 1px solid #dfe3fa;
+    //               padding: 1rem;
+    //               font-family: 'Spartan', sans-serif;
+    //               font-size: 12px;
+    //               font-weight: 700;
+    //               color: #0c0e16;
 
-                  &:hover {
-                    cursor: pointer;
-                    color: #7c5dfa;
-                  }
-                }
+    //               &:hover {
+    //                 cursor: pointer;
+    //                 color: #7c5dfa;
+    //               }
+    //             }
 
-                :last-child {
-                  border: none;
-                }
-              }
+    //             :last-child {
+    //               border: none;
+    //             }
+    //           }
 
-              &:hover {
-                cursor: pointer;
-                border: 1px solid #9277ff;
+    //           &:hover {
+    //             cursor: pointer;
+    //             border: 1px solid #9277ff;
 
-                #dropdown-items {
-                  display: block;
-                }
-              }
-            }
-          }
-        }
-      }
+    //             #dropdown-items {
+    //               display: block;
+    //             }
+    //           }
+    //         }
+    //       }
+    //     }
+    //   }
 
-      #ni-item-list {
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        margin-bottom: 20px;
+    //   #ni-item-list {
+    //     display: flex;
+    //     flex-direction: column;
+    //     justify-content: flex-start;
+    //     margin-bottom: 20px;
 
-        #modal-item-list-header {
-          display: flex;
-          justify-content: space-between;
-          align-items: center;
+    //     #modal-item-list-header {
+    //       display: flex;
+    //       justify-content: space-between;
+    //       align-items: center;
 
-          #header1 {
-            width: 215px;
-          }
-          #header2 {
-            width: 50px;
-          }
-          #header3 {
-            width: 70px;
-          }
-          #header4 {
-            width: 60px;
-          }
-        }
+    //       #header1 {
+    //         width: 215px;
+    //       }
+    //       #header2 {
+    //         width: 50px;
+    //       }
+    //       #header3 {
+    //         width: 70px;
+    //       }
+    //       #header4 {
+    //         width: 60px;
+    //       }
+    //     }
 
-        [id^='modal-item-list-inputs'] {
-          display: flex;
-          justify-content: space-between;
-          align-items: center;
-          margin-bottom: 20px;
+    //     [id^='modal-item-list-inputs'] {
+    //       display: flex;
+    //       justify-content: space-between;
+    //       align-items: center;
+    //       margin-bottom: 20px;
 
-          #item-name-input {
-            width: 215px;
-          }
+    //       #item-name-input {
+    //         width: 215px;
+    //       }
 
-          #qty-input {
-            width: 50px;
-          }
+    //       #qty-input {
+    //         width: 50px;
+    //       }
 
-          #price-input {
-            width: 50px;
-          }
+    //       #price-input {
+    //         width: 50px;
+    //       }
 
-          p {
-            width: 80px;
-            text-align: center;
-            font-weight: 700;
-          }
+    //       p {
+    //         width: 80px;
+    //         text-align: center;
+    //         font-weight: 700;
+    //       }
 
-          img:hover {
-            cursor: pointer;
-          }
-        }
+    //       img:hover {
+    //         cursor: pointer;
+    //       }
+    //     }
 
-        #modal-add-new-item {
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          width: 100%;
-          height: 50px;
-          background: #f9fafe;
-          border-radius: 24px;
-          color: #7e88c3;
+    //     #modal-add-new-item {
+    //       display: flex;
+    //       justify-content: center;
+    //       align-items: center;
+    //       width: 100%;
+    //       height: 50px;
+    //       background: #f9fafe;
+    //       border-radius: 24px;
+    //       color: #7e88c3;
 
-          &:hover {
-            cursor: pointer;
-            background: #dfe3fa;
-          }
-        }
-      }
+    //       &:hover {
+    //         cursor: pointer;
+    //         background: #dfe3fa;
+    //       }
+    //     }
+    //   }
 
-      #ni-bot-btns {
-        display: flex;
-        justify-content: space-between;
+    //   #ni-bot-btns {
+    //     display: flex;
+    //     justify-content: space-between;
 
-        .discard {
-          color: #7e88c3;
-          background: #f9fafe;
-          width: 100px;
-          padding: 0;
+    //     .discard {
+    //       color: #7e88c3;
+    //       background: #f9fafe;
+    //       width: 100px;
+    //       padding: 0;
 
-          &:hover {
-            background: #dfe3fa;
-          }
-        }
+    //       &:hover {
+    //         background: #dfe3fa;
+    //       }
+    //     }
 
-        #save-btns {
-          display: flex;
-          justify-content: space-between;
+    //     #save-btns {
+    //       display: flex;
+    //       justify-content: space-between;
 
-          .draft {
-            color: #7e88c3;
-            background: #373b53;
-            margin-right: 10px;
-            padding: 0;
+    //       .draft {
+    //         color: #7e88c3;
+    //         background: #373b53;
+    //         margin-right: 10px;
+    //         padding: 0;
 
-            &:hover {
-              background: #0c0e16;
-            }
-          }
+    //         &:hover {
+    //           background: #0c0e16;
+    //         }
+    //       }
 
-          .send {
-            color: #ffffff;
-            background: #7c5dfa;
-            padding: 0;
+    //       .send {
+    //         color: #ffffff;
+    //         background: #7c5dfa;
+    //         padding: 0;
 
-            &:hover {
-              background: #9277ff;
-            }
-          }
-        }
-      }
-    }
+    //         &:hover {
+    //           background: #9277ff;
+    //         }
+    //       }
+    //     }
+    //   }
+    // }
   }
 
   #invoices {
